# tailwind-generator

./: .gitignore  .npmignore  Cargo.toml  Makefile  README.md  index.js  package.json  packages.dhall  spago.dhall  tailwind.css  test.dhall  tsconfig.json  tslint.json
lib/: langs.js  tailwind.js  utils.js
lib/adapters/: elm.js  purescript.js  reasonml.js  typescript.js
npm/: cli.js  getBinary.js  index.js  install.js  run-generate.js  run-validate.js  run.js  uninstall.js
pyaco/: Cargo.toml
pyaco-core/: Cargo.toml
pyaco-core/src/: classes_parser.rs  errors.rs  lib.rs  utils.rs
pyaco-core/src/lang/: elm.rs  mod.rs  purescript.rs  rescript.rs  rescript_type.rs  typescript.rs  typescript_type_1.rs  typescript_type_2.rs
pyaco-core/templates/: elm.txt  purescript.txt  rescript.txt  rescript_type.txt  rescripti.txt  typescript.txt  typescript_type_1.txt  typescript_type_2.txt
pyaco-generate/: Cargo.toml
pyaco-generate/src/: errors.rs  lib.rs  main.rs
pyaco-macro/: Cargo.toml
pyaco-macro/src/: lib.rs
pyaco-macro/tests/: main.rs
pyaco-node/: Cargo.toml  package.json  pyaco.js
pyaco-node/src/: lib.rs
pyaco-validate/: Cargo.toml
pyaco-validate/src/: errors.rs  lib.rs  main.rs
pyaco-validate/src/sink/: console.rs  mod.rs
pyaco/src/: main.rs
src/: AppM.purs  Lang.purs  Main.purs  Options.purs  Parser.purs  Printer.purs  Utils.js  Utils.purs  Verbosity.purs  classes_parser.rs  langs.ts  main.rs  tailwind.ts  types.ts  utils.rs  utils.ts
src/adapters/: elm.ts  purescript.ts  reasonml.ts  typescript.ts
src/lang/: elm.rs  mod.rs  rust.rs
style-generator/: Cargo.toml
style-generator-core/: Cargo.toml
style-generator-core/src/: classes_parser.rs  lib.rs  utils.rs
style-generator-core/src/lang/: elm.rs  mod.rs  purescript.rs  rescript.rs  rescript_type.rs  typescript.rs  typescript_type_1.rs  typescript_type_2.rs  utils.rs
style-generator-core/templates/: elm.txt  purescript.txt  rescript.txt  rescript_type.txt  rescripti.txt  typescript.txt  typescript_type_1.txt  typescript_type_2.txt
style-generator-macro/: Cargo.toml  style-generator.toml
style-generator-macro/src/: lib.rs
style-generator-macro/tests/: main.rs
style-generator/npm/: getBinary.js  run.js  uninstall.js
style-generator/src/: main.rs
style-validate/: .gitignore  Cargo.toml
style-validate/src/: main.rs
templates/: elm.hbs  elm.txt  purescript.txt  purs.hbs  re.hbs  rei.hbs  rescript.txt  rescripti.txt  rust.txt  ts-type-level-2.hbs  ts-type-level.hbs  ts.hbs  typescript.txt
test/: Assert.purs  Main.purs  ParserSpec.purs
test/snapshots/: all-classes.ast  all-classes.css  all-classes.purs.print
