[workspace]
resolver = "2"
members = [
    "pyaco",
    "pyaco-node",
    "pyaco-generate",
    "pyaco-core",
    "pyaco-macro",
    "pyaco-validate",
]

[workspace.package]
authors = ["Kévin COMBRIAT <kevin@sc0ville.com>"]
rust-version = "1.68.2"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.70"
askama = "0.12.0"
async-trait = "0.1.68"
clap = { version = "4.2.1", features = ["derive"] }
compact_str = "0.7.0"
convert_case = "0.6.0"
cssparser = "0.29.6"
dunce = "1.0.3"
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }
glob = "0.3.1"
grep-matcher = "0.1.6"
grep-regex = "0.1.11"
grep-searcher = "0.1.11"
napi = { version = "2.12.2", features = ["serde-json", "tokio_rt"] }
napi-derive = "2.12.2"
notify = "5.1.0"
notify-debouncer-mini = { version = "0.2.1", default-features = false }
once_cell = "1.17.1"
proc-macro-error = "1.0.4"
pyaco-core = { path = "./pyaco-core" }
pyaco-generate = { path = "./pyaco-generate" }
pyaco-validate = { path = "./pyaco-validate" }
quote = "1.0.26"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
syn = "2.0.13"
thiserror = "1.0.40"
toml = "0.7.3"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ureq = "2.6.2"
url = "2.3.1"
