[package]
name = "pyaco-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
askama.workspace = true
async-trait.workspace = true
compact_str.workspace = true
convert_case.workspace = true
cssparser.workspace = true
dunce.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ureq.workspace = true
url.workspace = true
