[package]
name = "pyaco-generate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
compact_str.workspace = true
tracing.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
pyaco-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
