[package]
name = "pyaco-macro"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow.workspace = true
compact_str.workspace = true
once_cell.workspace = true
proc-macro-error.workspace = true
pyaco-core.workspace = true
quote.workspace = true
serde.workspace = true
syn.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
