[package]
name = "pyaco-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
pyaco-generate.workspace = true
pyaco-validate.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
napi-build = "2.0.1"
