[package]
authors = ["Kévin COMBRIAT <kevin@sc0ville.com>"]
edition = "2018"
name = "pyaco-validate"
version = "0.1.0"

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.5"
futures = { version = "0.3.17", default-features = false, features = ["alloc"] }
glob = "0.3.0"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"
log = "0.4.14"
notify = "4.0.17"
pyaco-core = { path = "../pyaco-core" }
regex = "1.5.4"
tokio = { version = "1.12.0", features = ["full"] }
