[package]
name = "pyaco-validate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
compact_str.workspace = true
futures.workspace = true
glob.workspace = true
grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
pyaco-core.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
