[package]
authors = ["Kévin COMBRIAT <kevin@sc0ville.com>"]
edition = "2018"
name = "pyaco"
version = "0.1.0"

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.4"
env_logger = "0.9.0"
pyaco-generate = {path = "../pyaco-generate"}
pyaco-validate = {path = "../pyaco-validate"}
tokio = {version = "1.18.5", features = ["full"]}
