[package]
name = "pyaco"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pyaco-generate.workspace = true
pyaco-validate.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
