[package]
edition = "2018"
name = "style-validate"
version = "0.1.0"

[dependencies]
anyhow = "1.0.42"
clap = "3.0.0-beta.2"
env_logger = "0.9.0"
futures = {version = "0.3.16", default-features = false, features = ["alloc"]}
glob = "0.3.0"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"
log = "0.4.14"
regex = "1.5.4"
style-generator-core = {path = "../style-generator-core"}
tokio = {version = "1.9.0", features = ["full"]}
